package supplyChainPackage;
syntax = "proto3";

message PayLoad{
    enum Action {
        LAND_REGISTRATION = 0;
        START_CULTIVATION = 1;
        INSPECTION = 2;
        PERFORM_HARVEST = 3;
        CREATE_PACKAGE = 4;
		TRANSFER_PACKAGE = 5;
		UPDATE_PROCESS_DETAILS = 6;
    }
    Action action = 1;
    LandRegistrationParams land_registration = 2;
    StartCultivationParams start_cultivation = 3;
    InspectParams inspection = 4;
    PerformHarvestParams perform_harvest = 5;
    CreatePackageParams create_package = 6;  //Process Agent
	TransferPackageParams transfer_package = 7;  //Retail Agent
	UpdatePackageParams updateProcessDetails = 8;
}

message Land{
    string Farmer_name = 1;
    string Farm_address = 2;
    string State = 3;
    string panchayat = 4;
    string land_survey_number = 5;
    string owner_name = 6;
	int32  land_iD = 7;
	string Registration_no = 8;
}

// message Address{
// 	string Registration_no = 1;
// 	string Farmer_name = 2;
// }

message LandRegistration{
	string Farm_address = 1; 
	string State = 2;
	string Country = 3;
	string Exporter_name = 4;
	string Importer_name = 5;
	string Dateof_registration = 6;
}

message TransferPackageParameters {
	string retail_agent_public_key = 1;
	int32 internal_batch_no = 2;
}

message CultivationData {
	string Crop_name = 1;
	string Crop_season = 2;
	string Dateofstart = 3;
}
message InspectionData {
	string Inspection_report = 1;
	string Inspection_date = 2;
	string Inspector_name = 3;
	string Farmers_public_key = 4;
	string Crop_variety = 5;
	string Crop_season = 6;
	string Crop_name = 7;
	string Temperature = 8;
	string Temerpature_unit = 9;
	string Humidity = 10;
	string Humidity_unit = 11;
}

message HarvestData {
	string Crop_variety = 1;
	string Crop_measure_category = 2;
	string Dateof_end = 3;
	string Dateofstart = 4;
	string Humidity = 5;
	string Humidity_unit = 6;
	string Quantity = 7;
	string Quantity_unit = 8;
	string Temerpature_unit = 9;
	string Temperature = 10;
}

message PackageData {
	int32 Quantity = 1;
	string Rosting_duration = 2;
	string Package_date_time = 3;
	string Temperature = 4;
	string Internal_batch_no = 5;
	string Processor_name = 6;
	string Processor_address = 7;
}

message UpdateProcessDetailsParameters{
	int32 set_price = 1;
	string Processor_name = 2;
}

message LandRegistrationParams {
	LandRegistration landregistrationparameters = 1;
	Land land = 2;
}

message StartCultivationParams {
	CultivationData startcultivationparameters = 1;
	Land land = 2;
}

message InspectParams {
	InspectionData inspectparameters = 1;
	Land land = 2;
}

message PerformHarvestParams {
	HarvestData performharvestparameters = 1;
	Land land = 2; 
}

message CreatePackageParams {
	PackageData createpackageparameters = 1;
}


message UpdatePackageParams{
	PackageData package_details = 1;
	int32 set_price = 2;
}

message TransferPackageParams {
PackageData package_details = 1;
string retail_agent_public_key = 2;
int32 internal_batch_no = 3;
}


// message UpdatePackageParams{
// 	UpdateProcessDetailsParameters updateprocessdetailsparameters = 1;
// }

// message TransferPackageParams {
// 	TransferPackageParameters transferpackageparameters = 1;
// }

